# gst-droidmediabuffer_to_glmemory

./: .gitignore  README  configure.ac
plugins/: Makefile.am  gstdroidmediabuffertoglmemory.c  gstdroidmediabuffertoglmemory.h  gstdroidmediabuffertoglmemoryplugin.c
tools/: Makefile.am  gstdroidmediabuffertoglmemory.c
