plugin_LTLIBRARIES = libgstdroidmediabuffertoglmemory.la

# sources used to compile this plug-in
libgstdroidmediabuffertoglmemory_la_SOURCES = gstdroidmediabuffertoglmemoryplugin.c gstdroidmediabuffertoglmemory.c gstdroidmediabuffertoglmemory.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstdroidmediabuffertoglmemory_la_CFLAGS = $(GST_CFLAGS)
libgstdroidmediabuffertoglmemory_la_LIBADD = $(GST_LIBS)
libgstdroidmediabuffertoglmemory_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

