bin_PROGRAMS = gst-droidmediabuffer_to_glmemory

# sources used to compile this plug-in
gst_droidmediabuffer_to_glmemory_SOURCES = gstdroidmediabuffertoglmemory.c

# compiler and linker flags used to compile the program, set in configure.ac
gst_droidmediabuffer_to_glmemory_CFLAGS = $(GST_CFLAGS)
gst_droidmediabuffer_to_glmemory_LDADD = $(GST_LIBS)

